# quantforge

./: .gitignore  .gitignore.prepared  .mcp.json  BATCH_API_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROGRESS.md  PROJECT_STATUS.md  README-ja.md  README.md  README_en.md  main.py  performance_comparison_py313.md  performance_report.md  pyproject.toml  test_american_debug.rs  test_american_quick.py  test_arrow_native.py  test_arrow_performance.py  test_import.py  test_iv_debug.py  test_quantforge.py  tracker.yaml
.cargo/: config.toml
.claude/: common-patterns.md  context.md  critical-rules.xml  development-principles.md  error-codes.md  naming-protocol.md  project-improvements.md  project-knowledge.md
.serena/: project.yml
benches/: american_benchmark.rs  batch_processing.rs  benchmark.rs
benchmarks/: PERFORMANCE_COMPARISON.md  README.md  __init__.py  __main__.py  analyze.py  analyze_validation_overhead.py  architecture_comparison_2025-09-01.md  arraylike_benchmark.py  arrow_native_analysis.md  baseline_manager.py  benchmark_arrow_api.py  benchmark_results.json  compare_performance.py  ffi_overhead_analysis.py  format_results.py  iv_baseline.py  iv_comparison.py  iv_vectorized.py  iv_vectorized.pyi  performance_comparison.py  performance_guard.py  practical_scenarios.py  profile_batch.py  profiling_results_2025-09-01.md  prototype_vs_actual_analysis.md  py.typed  pyarrow_native_support_analysis.md  run_benchmarks.sh  run_comparison.py  run_practical_scenarios.py  save_results.py  test_all_models_optimization.py  test_arrow_native.py  test_large_batch_performance.py  test_optimizations.py  test_parallel_threshold.py  test_pyarrow_detailed.py  test_pyarrow_interface.py  test_small_batch_optimization.py  test_threshold_impact.py  (+1 more)
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/quantforge/: __init__.py  __init__.pyi  black_scholes.py  quantforge.pyi
bindings/python/python/quantforge/models/: __init__.py
bindings/python/src/: arrow_common.rs  arrow_convert.rs  arrow_native.rs  error.rs  lib.rs  models.rs  utils.rs
bindings/python/src.backup/: lib.rs
bindings/python/src.backup/converters/: broadcast.rs  mod.rs
bindings/python/src.backup/models/: american.rs  black_scholes.rs  instrumented.rs  merton.rs
bindings/python/src/converters/: array.rs  broadcast.rs  broadcast_optimized.rs  mod.rs
bindings/python/src/models/: american.rs  black76.rs  black_scholes.rs  black_scholes_fixed.rs  merton.rs  mod.rs
bindings/python/stubs/: pyarrow.pyi
bindings/python/tests/: test_memory_safety.py  test_performance.py  test_type_checking.py
bindings/python/tests/benchmarks/: ffi_overhead.py  zero_copy.py
bindings/python/tests/integration/: test_models.py
bindings/python/tests/performance/: test_benchmarks.py
bindings/python/tests/unit/: test_api.py
core/: Cargo.toml  test_boundary.rs
core/benches/: math_benchmark.rs  models_benchmark.rs
core/src/: arrow_native.rs  constants.rs  error.rs  lib.rs
core/src.backup/: constants.rs
core/src.backup/math/: distributions.rs  solvers.rs
core/src.backup/models/: black_scholes.rs
core/src.backup/models/american/: boundary.rs  pricing.rs
core/src.backup/traits/: mod.rs
core/src/compute/: american.rs  american_adaptive.rs  american_simple.rs  arrow_native.rs  black76.rs  black_scholes.rs  formulas.rs  greeks.rs  merton.rs  mod.rs  traits.rs
core/src/math/: black_scholes_math.rs  distributions.rs  mod.rs
core/src/models/: american.rs  black76.rs  black_scholes.rs  merton.rs  mod.rs
core/src/models/american/: boundary.rs  greeks.rs  pricing.rs
core/tests/: property_tests.proptest-regressions  property_tests.rs  test_american.rs  test_black76.rs  test_black_scholes.rs  test_merton.rs
docs/: changelog.md  conf.py  faq.md  index.md  installation.md  quickstart.md  roadmap.md
examples/: README.md  basic_usage.py
plans/: 2025-01-24-pytest-coverage-strategy.md  2025-01-25-rust-norm-cdf-erf.md  2025-01-25-rust-put-option.md  2025-01-26-python-golden-master-redesign.md  2025-01-26-rust-american-adaptive-integration.md  2025-01-26-rust-american-option-accuracy-fix.md  2025-01-26-rust-bs2002-removal.md  2025-01-27-both-batch-api-complete-redesign.md  2025-01-27-python-batch-api-implementation.md  2025-01-27-python-benchmark-iv.md  2025-01-27-python-implied-volatility-benchmark.md  2025-01-27-rust-american-greeks-unification.md  2025-01-27-rust-american-option-implementation.md  2025-01-28-both-github-pages-english-first-docs.md  2025-01-28-both-md-based-documentation-i18n.md  2025-01-29-both-myst-structure-comparison-system.md  2025-01-30-python-pypi-release.md  2025-01-30-rust-performance-optimization.md  2025-08-25-both-precision-standardization.md  2025-08-25-rust-put-option.md  2025-08-26-black76-model-implementation.md  2025-08-26-merton-model-implementation.md  2025-08-26-multi-model-architecture.md  2025-08-26-python-api-standardization.md  2025-08-27-both-wheel-distribution-strategy.md  2025-08-28-python-fix-module-import-api.md  2025-08-28-readme-sync-implementation.md  2025-08-30-python-benchmarks-package-restructure.md  2025-08-30-realistic-performance-optimization.md  2025-08-30-rust-batch-processor-unification.md  2025-08-30-rust-performance-optimization.md  2025-08-31-american-model-implementation.md  2025-08-31-bindings-test-implementation.md  2025-08-31-small-batch-optimization-code.rs  2025-08-31-small-batch-optimization-python.py  2025-08-31-small-batch-optimization.md  2025-08-31-type-stubs-implementation.md  2025-09-01-arrow-implementation-context.md  2025-09-01-rust-arrow-ffi-revised.md  2025-09-02-both-arrow-native-broadcasting-enhancement.md  (+13 more)
results/: history.jsonl  latest.json
scripts/: add_myst_names.py  archive_benchmarks.sh  build-wheel.sh  check_critical_rules.sh  coverage_report.py  detect_hardcode.sh  extract_doc_structure.py  generate_progress_report.py  generate_test_report.py  migrate_benchmarks.sh  run_all_tests.sh  test-wheel.sh  validate-commits.sh  validate_docs.sh  verify_benchmark_structure.py  verify_doc_implementation.sh  (+1 more)
src/: broadcast.rs  (+9 more)
(+445 files in other folders)
