[workspace]
resolver = "2"
members = [
    "core",
    "bindings/python"
]

[workspace.package]
version = "0.0.6"
edition = "2021"
authors = ["QuantForge Contributors"]
license = "MIT"
repository = "https://github.com/quantforge/quantforge"

[workspace.dependencies]
# 共通の依存関係を定義
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.16"
rayon = "1.10"

# Arrow関連
arrow = "56.0"
arrow-array = "56.0"
arrow-buffer = "56.0"

# PyO3はbindings層のみで使用
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py312"] }
numpy = "0.22"

# テスト用
approx = "0.5"
criterion = "0.5"
proptest = "1.0"