[workspace]
resolver = "2"
members = [
    "core",
    "bindings/python"
]

[workspace.package]
version = "0.0.11"
edition = "2021"
authors = ["QuantForge Contributors"]
license = "MIT"
repository = "https://github.com/quantforge/quantforge"

[workspace.dependencies]
# 共通の依存関係を定義
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.16"
rayon = "1.10"

# Arrow関連
arrow = { version = "56.0", features = ["ffi", "pyarrow"] }
arrow-array = "56.0"
arrow-buffer = "56.0"

# PyO3はbindings層のみで使用
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-arrow = "0.11.0"
numpy = "0.25"

# テスト用
approx = "0.5"
criterion = "0.5"
proptest = "1.0"