[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "quantforge"
dynamic = ["version"]
description = "高性能オプション価格計算エンジン - Rust + PyO3実装"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
]
[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "linkify-it-py>=2.0.3",
    "sphinxext-opengraph>=0.9.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
]

[dependency-groups]
dev = [
    "maturin>=1.9.3",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.12.10",
    "scipy>=1.16.1",
    "types-pyyaml>=6.0.12.20250822",
    "scipy-stubs>=1.16.1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
exclude = [
    "playground/",
    "scratch/",
    "draft/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "quantforge.quantforge"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--cov=quantforge",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
    "golden: marks tests as golden master tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
exclude = [
    "playground/",  # 一時的な検証スクリプトは除外
    "scratch/",  # テンポラリファイルは除外
    "tests/integration/test_put_options.py",  # 型スタブ未対応のため一時除外
    "tests/unit/test_implied_volatility.py",  # PyO3バインディングの型情報不完全
    "draft/",  # 参考実装・プロトタイプは除外
]
