[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "quantforge"
version = "0.0.5"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "quantforge.quantforge"
python-source = "python"
